<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/blue"
    android:orientation="horizontal"
    android:gravity="center_vertical|center_horizontal"
    tools:context="com.icsfood.icsfood.MenuPageFragment">
    <TextView 
        android:text="@string/menu"
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="0"/>
    <TextView 
        android:text="@string/activity"
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="0"/>
    <TextView 
        android:text="@string/share"
        android:layout_width="0dp"
    	android:layout_height="wrap_content"
    	android:layout_weight="0"/>
</LinearLayout>