<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:round="http://schemas.android.com/apk/res/com.org.icsfoodapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg"
    android:gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:orientation="vertical" >

    <LinearLayout 
	    android:id="@+id/reg_upload_group"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center">
	    <com.fax.utils.view.RoundAngleImageView
	        android:id="@+id/reg_avator"
	        android:layout_width="80dp"
	        android:layout_height="80dp"
	        android:layout_margin="8dp"
	        android:src="@drawable/menu_ic_person"
	        round:borderColor="@android:color/transparent"
	        round:borderWidth="0px"
	        round:roundHeight="40dp"
	        round:roundWidth="40dp" />
	
	    <TextView
	        android:id="@+id/reg_upload_photo"
	        android:padding="6dp"
	        android:textColor="@android:color/white"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@drawable/reg_ic_upload"
	        android:text="@string/reg_upload_photos" />
	</LinearLayout>
    <EditText 
        android:id="@+id/reg_nickname"
        android:hint="@string/nickname"
        android:background="@drawable/common_input_bg"
    	android:textColor="@color/green"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:layout_margin="10dp"
        android:singleLine="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
    <EditText 
        android:id="@+id/reg_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/common_input_bg"
    	android:textColor="@color/green"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:layout_margin="10dp"
        android:singleLine="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
    <EditText 
        android:id="@+id/reg_mobile"
        android:hint="@string/mobilephoto"
        android:background="@drawable/common_input_bg"
    	android:textColor="@color/green"
        android:gravity="center_vertical"
        android:numeric="integer"
        android:textSize="12sp"
        android:layout_margin="10dp"
        android:singleLine="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
    <EditText 
        android:id="@+id/reg_password"
        android:hint="@string/password"
        android:background="@drawable/common_input_bg"
    	android:textColor="@color/green"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:layout_margin="10dp"
        android:singleLine="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	<Button 
	    android:id="@+id/reg_confirm_btn"
	    android:layout_margin="20dp"
	    android:background="@drawable/common_btn_white"
	    android:textColor="@color/green"
	    android:text="@string/submit"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
</LinearLayout>