<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/common_bg"
    android:orientation="vertical" >
    <ImageView 
        android:src="@drawable/logo_big"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	<LinearLayout 
	    android:layout_margin="20dp"
	    android:orientation="vertical"
	    android:background="@drawable/login_input_bg"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <EditText 
	        android:id="@+id/login_name"
	        android:hint="@string/username_email"
	        android:inputType="textEmailAddress"
	        android:drawablePadding="14dp"
	        android:drawableLeft="@drawable/login_ic_person"
	        android:background="@android:color/transparent"
	    	android:textColor="@color/green"
	        android:gravity="center_vertical"
	        android:padding="14dp"
	        android:singleLine="true"
	        android:layout_weight="1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
	    <EditText 
	        android:id="@+id/login_password"
	        android:inputType="textPassword"
	        android:hint="@string/password"
	        android:drawablePadding="14dp"
	        android:drawableLeft="@drawable/login_ic_passwd"
	        android:background="@android:color/transparent"
	    	android:textColor="@color/green"
	        android:gravity="center_vertical"
	        android:padding="14dp"
	        android:singleLine="true"
	        android:layout_weight="1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
	</LinearLayout>
	<Button 
	    android:id="@+id/login_confirm_btn"
	    android:layout_marginLeft="40dp"
	    android:layout_marginRight="40dp"
	    android:background="@drawable/common_btn_white"
	    android:textColor="@color/green"
	    android:text="@string/login"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	
	<LinearLayout 
	    android:layout_marginTop="20dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:text="@string/login_not_a_member"
	        android:alpha="0.5"
	    	android:textColor="@android:color/white"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
	    <TextView 
	        android:id="@+id/login_sign_up"
	        android:text="@string/login_sign_up"
	        android:padding="10dp"
	        android:background="@drawable/common_btn_in_white"
	    	android:textColor="@android:color/white"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
