<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="50dp"
	android:orientation="vertical"
	android:background="@color/blue">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/blue">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/recommend"
			android:layout_margin="3dp"
			android:layout_gravity="center_vertical"
			android:textColor="@android:color/white"/>
		<RatingBar 
			android:id="@+id/comment_foot_currscore"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/customBigWhiteRatingBar"
			android:rating="3"
			android:stepSize="1"
			android:layout_marginTop="9dp"
			android:layout_gravity="center_vertical"/>
	</LinearLayout>
	<EditText
		android:id="@+id/comment_foot_content"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:gravity="top|left"
	    android:hint="@string/enter_code"
		android:minLines="4"
	    android:padding="3dp"
		android:background="@color/darkblue"/>
	<TextView
		android:id="@+id/comment_foot_submit_button"
		android:layout_width="match_parent"
		android:layout_height="35dp"
	    android:text="@string/submit"
		android:padding="6dp"
		android:clickable="true"
		android:textColor="@android:color/white"
		android:gravity="center_horizontal"
		android:background="@color/blue"/>
</LinearLayout>