<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:round="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<FrameLayout
		android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
	</FrameLayout>
	<ScrollView 
        android:layout_gravity="start"
        android:layout_width="260dp"
	    android:background="#cc6fcec4"
        android:layout_height="match_parent">
	<LinearLayout 
        android:layout_width="match_parent"
    	android:padding="10dp"
    	android:gravity="center"
    	android:orientation="vertical"
        android:layout_height="wrap_content" >
        <com.fax.utils.view.RoundAngleImageView 
            android:id="@+id/menu_avator"
            android:layout_margin="8dp"
            android:src="@drawable/menu_ic_person"
            round:roundWidth="40dp"
            round:roundHeight="40dp"
            round:borderWidth="0px"
            round:borderColor="@android:color/transparent"
	        android:layout_width="80dp"
	        android:layout_height="80dp"/>
        <TextView 
            android:id="@+id/menu_name"
            android:text="@string/please_login"
            android:textColor="@android:color/white"
            android:textSize="22sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
        <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
			android:gravity="center">
	        <LinearLayout 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
			    android:gravity="center"
			    android:onClick="myStoresClick"
			    android:layout_weight="1">
		        <TextView 
		            android:id="@+id/menu_my_stores"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		            android:text="0"
		            android:textColor="@android:color/white"
		            android:textSize="26sp"
			        android:layout_weight="1"
			        android:gravity="center"/>
		        <TextView 
		            android:text="@string/my_stores"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		            android:textColor="@android:color/white"
		            android:textSize="12sp"
			        android:layout_weight="1"
			        android:gravity="center"/>
	        </LinearLayout>
	        <LinearLayout 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
			    android:gravity="center"
			    android:onClick="myOrdersClick"
			    android:layout_weight="1">
		        <TextView 
		            android:id="@+id/menu_my_orders"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		            android:text="0"
		            android:textColor="@android:color/white"
		            android:textSize="26sp"
			        android:layout_weight="1"
			        android:gravity="center"/>
		        <TextView 
		            android:text="@string/my_order"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
		            android:textColor="@android:color/white"
		            android:textSize="12sp"
			        android:layout_weight="1"
			        android:gravity="center"/>
	        </LinearLayout>
        </LinearLayout>
        
        <Button 
            android:text="@string/star"
            android:onClick="menuStarClick"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/common_ic_arrow"
            android:drawableLeft="@drawable/menu_ic_star"
            android:background="@drawable/common_btn_in_white"
            android:textColor="@android:color/white"
            android:gravity="left|center_vertical"
            android:drawablePadding="20dp"
	        android:textSize="16sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
        <Button 
            android:text="@string/restaurant"
            android:onClick="menuRestaurantClick"
            android:drawableRight="@drawable/common_ic_arrow"
            android:drawableLeft="@drawable/menu_ic_restaurant"
            android:background="@drawable/common_btn_in_white"
            android:textColor="@android:color/white"
            android:gravity="left|center_vertical"
            android:drawablePadding="20dp"
	        android:textSize="16sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
        <Button 
            android:text="@string/private_menu"
            android:onClick="menuMenuClick"
            android:drawableRight="@drawable/common_ic_arrow"
            android:drawableLeft="@drawable/menu_ic_menu"
            android:background="@drawable/common_btn_in_white"
            android:textColor="@android:color/white"
            android:gravity="left|center_vertical"
            android:drawablePadding="20dp"
	        android:textSize="16sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
        <Button 
            android:text="@string/activity"
            android:onClick="menuActivityClick"
            android:drawableRight="@drawable/common_ic_arrow"
            android:drawableLeft="@drawable/menu_ic_activity"
            android:background="@drawable/common_btn_in_white"
            android:textColor="@android:color/white"
            android:gravity="left|center_vertical"
            android:drawablePadding="20dp"
	        android:textSize="16sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
        <Button 
            android:id="@+id/menu_setting"
            android:onClick="menuSettingClick"
            android:text="@string/setting"
            android:drawableRight="@drawable/common_ic_arrow"
            android:drawableLeft="@drawable/menu_ic_setting"
            android:background="@drawable/common_btn_in_white"
            android:textColor="@android:color/white"
            android:gravity="left|center_vertical"
            android:drawablePadding="20dp"
	        android:textSize="16sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	</ScrollView>
</android.support.v4.widget.DrawerLayout><!-- android.support.v4.widget.DrawerLayout -->
    
    
    