<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:background="@color/blue">
	<FrameLayout 
	    android:id="@+id/order_list_content"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
    <ImageView 
        android:src="@drawable/vector2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:scaleType="center"/>
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/order_number"
			android:textColor="@android:color/white"
			android:textSize="15sp"/>
        <TextView
            android:id="@+id/order_succ_number"
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=""
			android:textColor="@android:color/white"
			android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:background="@android:color/white"
		android:orientation="vertical"
		android:gravity="center">
        <TextView 
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:layout_margin="10dp"
			android:text="@string/order_success_text"
			android:textColor="@android:color/darker_gray"/>
        <TextView 
            android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="10dp"
			android:gravity="center"
			android:onClick="myOrderClick"
			android:clickable="true"
			android:text="@string/my_order"
			android:background="@drawable/orderseccuss_button"
			android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>