<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/order_bigimage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_bigimage"
        android:orientation="vertical">
        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/custom_order"
            android:textSize="18sp"
            android:textColor="@android:color/white" />
        <View 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/blue"
            android:layout_margin="6dp"/>
        <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	        <TextView
	            android:id="@+id/order_price"
				android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_alignParentRight="true"
	        	android:layout_alignParentTop="true"
				android:layout_marginRight="20dp"
            	android:textColor="@android:color/white" />
	        
	        <View
	            android:id="@+id/order_line"
	            android:layout_width="match_parent"
	            android:layout_height="2dp"
            	android:layout_gravity="center_horizontal"
	            android:layout_below="@id/order_price"
	            android:background="@color/blue"
	            android:layout_margin="6dp"/>
	        <Spinner
	            android:id="@+id/order_number"
				android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:layout_below="@id/order_line"
	        	android:layout_alignParentRight="true"
				android:layout_marginRight="20dp"
				android:background="@null"
				/>
	        <TextView
	            android:id="@+id/order_number_label"
				android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/number"
	        	android:layout_below="@id/order_line"
	        	android:layout_toLeftOf="@id/order_number"
				android:layout_marginRight="10dp"
            	android:textColor="@android:color/white" />
	        <TextView
	            android:id="@+id/order_price_label"
				android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/price"
	        	android:layout_alignTop="@id/order_price"
	        	android:layout_alignLeft="@id/order_number_label"
				android:layout_marginRight="10dp"
            	android:textColor="@android:color/white" />
        </RelativeLayout>
        <View 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/blue"
            android:layout_margin="6dp"/>
        <LinearLayout
			android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
	        <TextView
	            android:id="@+id/order_total_label"
				android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="@string/total"
	        	android:textSize="17sp"
				android:layout_marginRight="10dp"
            	android:textColor="@android:color/white" />
	        <TextView
	            android:id="@+id/order_total"
				android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="0"
	        	android:textSize="17sp"
				android:layout_marginRight="20dp"
            	android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
    <Button 
		android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_alignParentBottom="true"
       	android:onClick="payClick"
       	android:text="@string/pay_now"
       	android:textColor="@android:color/white"
       	android:background="@color/blue"
       	android:gravity="center"/>
</RelativeLayout>
