<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <RelativeLayout
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:background="@color/blue">
        <ImageView
            android:id="@+id/order_detailed_image"
            android:src="@drawable/ic_launcher"
			android:layout_width="120dp"
		    android:layout_height="90dp"
		    android:scaleType="centerCrop"
		    android:layout_margin="5dp"/>
        <LinearLayout 
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/order_detailed_image"
		    android:layout_margin="5dp"
			android:orientation="vertical">
	        <TextView
	            android:id="@+id/order_detailed_name"
				android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_margin="5dp"
			    android:text=""
			    android:textSize="20sp"
			    android:textColor="@android:color/white"/>
	        <LinearLayout 
				android:layout_width="match_parent"
			    android:layout_height="wrap_content"
				android:layout_gravity="right|bottom"
				android:gravity="right|bottom"
				android:layout_marginRight="15dp">
				<TextView
		            android:id="@+id/order_detailed_total_label"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="￥"
				    android:textSize="14sp"
				    android:textColor="@android:color/white"/>
		        <TextView
		            android:id="@+id/order_detailed_total"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text=""
				    android:textSize="14sp"
				    android:textColor="@android:color/white"/>
	        </LinearLayout>
	        <LinearLayout 
				android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="right|bottom"
				android:gravity="right|bottom"
			    android:layout_marginRight="15dp"
			    android:layout_marginBottom="15dp">
		        <TextView
		            android:id="@+id/order_detailed_number_label"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="x"
				    android:textSize="14sp"
				    android:textColor="@android:color/white"/>
		        <TextView
		            android:id="@+id/order_detailed_number"
					android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text=""
				    android:textSize="14sp"
				    android:textColor="@android:color/white"/>
	        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <TableLayout
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/white">
        <TableRow>
            <TextView 
                android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="6dp"
	    		android:gravity="center"
	    		android:text="@string/order_no"
	    		android:textColor="@android:color/darker_gray"/>
            <TextView 
                android:id="@+id/order_detailed_order_no"
                android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="6dp"
	    		android:gravity="center"
	    		android:text=""
	    		android:textColor="@android:color/darker_gray"/>
        </TableRow>
        <TableRow>
            <TextView 
                android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="6dp"
	    		android:gravity="center"
	    		android:text="@string/order_time"
	    		android:textColor="@android:color/darker_gray"/>
            <TextView 
                android:id="@+id/order_detailed_order_time"
                android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="6dp"
	    		android:gravity="center"
	    		android:text=""
	    		android:textColor="@android:color/darker_gray"/>
        </TableRow>
        <TableRow
            android:id="@+id/order_detailed_codelist_title"
            android:visibility="gone"
            android:background="@color/lighter_gray">
            <TextView
                android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_margin="6dp"
	    		android:text="@string/redeem"
	    		android:textSize="16sp"
	    		android:textColor="@android:color/darker_gray"/>
        </TableRow>
    </TableLayout>
    <TextView 
        android:id="@+id/order_detailed_paybut"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:layout_gravity="center_horizontal"
		android:gravity="center"
		android:onClick="payOrderClick"
		android:clickable="true"
		android:text="@string/pay_now"
		android:background="@drawable/orderseccuss_button"
		android:textColor="@android:color/white"/>
    <com.fax.utils.view.list.ObjectXListView 
        android:id="@+id/order_detailed_codelist"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"/>
</LinearLayout>